bat.string1.lessons.bat.string1.StringTimes.scala.error
stringTimes:2: error: unclosed character literal
  var S = ''
          ^stringTimes:2: error: illegal start of simple expression
  var S = ''
          ^